Eportfolio/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Poppins", "Roboto", sans-serif;
  list-style-type: none;
  letter-spacing: 1px;
  scroll-behavior: smooth;
  
}

h1{
    font-weight: 700;

}






/* MAIN GENERICS */






/* GENERICS */

label {
    font-size: 14px;
    font-weight: bold;
  }

b {
    font-weight: 600;
  }

p {
    line-height: 1.5;
    font-size: 16px;
    font-weight: 300;
  }

.container{
    padding: 50px 0;
    width: 100%;
}

.reveal{
    position: relative;
    transform: translateY(150px);
    opacity: 0;
    transition: all 1s ease;
}

.colored{
    color: rgb(105, 124, 140);
}

.reveal.active{
    transform: translateY(0px);
    opacity: 1;
}

.row {
    width: 100%;
    max-width: 1100px;
    margin: 0 auto;
    padding: 0 12px;
}

label {
    font-size: 14px;
    font-weight: bold;
}

input, textarea {
    width: 100%;
    background-color: rgb(105, 124, 140);
    color: #e3dac9;
    outline: none;
    border: 3px solid #f0ead6;
    border-top: none;
    border-left: none;
    border-right: none;
    height: 40px;
}

textarea {
    resize: vertical;
    height: 100px;
    margin-top: 8px;
}



nav {
  height: 80px;
  display: flex;
}

a {
  text-decoration: none;
}


.project__img{
  height: 500px;
}




/* --- LANDING PAGE --- */
#landing-page {
  min-height: 100vh;
  background-image: url(./assets/landingpage.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 50%;
  box-shadow: inset 0 0 0 2000px rgb(73 80 87 / 50%);
}

.nav__container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  max-width: 1200px;
  margin: 0 auto;
  align-items: center;
}

.logo {
  width: 85px;
  padding-top: 15px;
  padding-left: 10px;
  filter: invert(1);
}

.nav__links{
    display: flex;
}

.nav__link--anchor{
  font-size: 16px;
  font-weight: 300;
}
.nav__link {
  padding: 10px;
  margin-left: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-weight: 600;
  color: #f0ead6;
  font-size: 14px;
  font-family: "times new roman";
  border-radius: 12px;
 

  transition: all 0.5s ease;
}

.nav__link:hover {
 /* background-color: #939191b6; */
 background-color: rgb(105, 124, 140)
}

.header {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -40%);
  width: 100%;
  max-width: 900px;
  padding: 0 30px;
}

.title {
  font-size: 3.5rem;
  margin-bottom: 12px;
  font-weight: 300;
  text-align: left;
  line-height: 1;
  color: #f0ead6;
  font-family: "Times New Roman", Times, serif;
  text-shadow: 2px 2px 8px rgb(9, 9, 9);
}

.header__para {
  font-size: 15px;
  line-height: 2;
  max-width: 250px;
  color: #f0ead6;
  font-family: "Times New Roman", Times, serif;
  margin: 0 auto;
  text-shadow: 2px 2px 8px rgb(9, 9, 9);
  margin-bottom: 40px;
}

.social__list {
  display: flex;
  justify-content: center;
  margin-right: 5rem;
  
}

.social__link {
  color: #f0ead6;
  font-size: 50px;
  margin-left: 1.5rem;


}



.mail__btn{
    width: 70px;
    height: 70px;
    font-size: 32px;
    border-radius: 50%;
    border: none;
    background-color: rgb(105, 124, 140);
    color: #f0ead6;
    position: absolute;
    bottom: 32px;
    z-index: 100;
    position: fixed;
    right: 40px;
    box-shadow: 0 12px 30px 0 rgb(0, 0, 0, 0.5);
}

.click{
    transition: all 300ms ease;
    cursor: pointer;
}

.click:hover{
    transform: scale(1.15);

}

.click:active{
    transform: scale(0.8);

}

nav, .scroll, .header{
    opacity: 1;
    visibility: visible;
    transition: all 600ms 600ms;
}

.modal--open nav,
.modal--open .scroll,
.modal--open .header
{
    opacity: 0;
    visibility: hidden;
    transition: all 400ms;
}

.scroll {
    position: absolute;
    bottom: 20px;
    left: 48.5%;
    transform: translateX(-48.5%);
}

.scroll__icon{
    width: 20px;
    height: 30px;
    border: 2px solid #f0ead6;
    border-radius: 24px;
    display: flex;
    align-items: center;
    justify-content: center;

}


.scroll__icon:after{
    content: "";
    background-color: #f0ead6;
    width: 4px;
    height: 6px;
    border-radius: 2px;
    animation: scroll 1000ms infinite alternate-reverse;

}

@keyframes scroll {
    0% {
        transform: translateY(3px);
    }
    100%{
        transform: translateY(-3px);
    }
}

/* MODAL */
.modal{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 90%;
    max-width: 1100px;
    height: 600px;
    border-radius: 10px;
    overflow: hidden;
    display: flex;
    visibility: hidden;
    z-index: -1;
    transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
    
    
   


}

.modal__half{
    width: 50%;
    padding: 40px 72px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    transition: all 600ms ease;
    position: relative;
  
}

.modal__about{
    background-color: #f0ead6;
    transform: translateX(-110%);
   
}

.modal--open .modal__about,
.modal--open .modal__contact{
    transform: translateX(0%);
}



.modal__contact{
    background-color: rgb(105, 124, 140);
    color: #f0f0f0;
    transform: translateX(110%);
}

.modal__languages{
display: flex;
flex-wrap: wrap;
}

.modal__language{
    width: 25%;
    padding: 25px;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    transition: all 300ms ease;
}

.modal--open .modal{
    z-index: 60;
    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
    visibility: visible;
}







.language__name{
    position: absolute;
    bottom: -10px;
    transform: scale(0);
    transition: all 300ms ease;
}

.modal__language:hover .language__name {
transform: scale(1);
}

.modal__language:hover{
    filter: brightness(80%);
    transform: scale(0.9);
}


.modal__language--img{
    width: 100%;
}

.modal__title{
    font-size: 26px;
}

.modal__sub-title{
    margin: 12px 0 24px 0;
    font-size: 14px;

}

.modal__para{
    margin-bottom: 12px;
    line-height: 1.75;
}


.form__item{
    margin-bottom: 20px;
}

.form__submit{
    background-color: #f0ead6;
    border: 2px solid #f0ead6;
    color: black;
    font-weight: bold;
    max-width: 240px;
    font-weight: 700;
    width: 100%;
    padding: 12px 24px;
    font-size: 20px;
    transition: all 300ms ease;
}

.form__submit:hover{
    border-color: #f0ead6;
    background-color: transparent;
    color: #f0ead6;
}

.form__submit:active{
    border-color: #f0ead6;
    color: black;
}

.modal__overlay{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: none;
    align-items: center;
    justify-content: center;
    z-index: -1;
}


.modal__overlay--loading{
background-color: black;
font-size: 80px;

}



.modal__overlay--success{
    background-color: rgb(105, 124, 140);
    font-size: 40px;
    font-weight: 700;
    text-align: center;
    padding: 90px;
}

.modal__overlay--visible{
    z-index: 1;
    display: flex;
}

.fa-spinner{
animation: spinner 750ms infinite linear;
}

@keyframes spinner{
    0% {
        transform: rotate(0);
 }

  100% {
    transform: rotate(360deg);
  }
}


.modal__exit{
    position: absolute;
    top: 30px;
    right: 40px;
    color: #f0ead6;
    font-size: 36px;
    z-index: 100;
}


/* SECTION PROJECTS */

#projects{
    background-color: rgb(245, 245, 245);
    transition: all 600ms ease;
}

.section__title {
    text-align: center;
    font-size: 48px;
    margin-bottom: 60px;
  }
  
  .project__img {
    width: 100%;
    transform: scale(1.07);
  }
  
  .project__wrapper {
    position: relative;
    border-radius: 20px;
    overflow: hidden;
    margin-bottom: 150px;
    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);

  }
  
  .project__wrapper:hover .project__description {
    opacity: 1;
    transform: translateY(-50%);
  }
  
  .project__wrapper:hover .project__img {
    transform: scale(1.07);
    filter: blur(5px);
    -webkit-animation: zoomin 90s 1;
  }

  


@-webkit-keyframes zoomin {
    0% {
        -webkit-transform: scale(1.07);
    }
    100% {
        -webkit-transform: scale(2);
    }

}
  
  .project__description {
    position: absolute;
    top: 50%;
    left: 90px;
    transform: translateY(100%);
    color: #f0ead6;
    opacity: 0;
    max-width: 550px;
    transition: opacity 300ms, transform 450ms ease;
  }
  .project__wrapper:hover .project__wrapper--bg {
    opacity: 0.7;
  }
  .project__wrapper--bg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #1c1d25;
    opacity: 0;
  }
  
  .project__description--title {
    font-size: 40px;
  }
  .project__description--sub-title {
    margin-top: 8px;
  }
  
  .project__description--link {
    color: #f0ead6;
    font-size: 20px;
    margin-right: 16px;
  }
  
  .project__description--para {
    margin: 16px 0;
  }

 
  /* FOOTER */
  
footer {
  background-color: rgb(73, 91, 105);
  display: flex;
  padding: 6% 0%;

}

.footer__row{
display: flex;
flex-direction: column;
align-items: center;
}




.footer__social--list{
  width: 100%;
  display: flex;
  justify-content: space-around;
  max-width: 500px;
  margin: 20px 0;
  font-size: 25px;
}

.footer__logo--img{
  filter: invert(1);
  height: 70px;
  width: 70px;
}

.footer__social--link, .footer__copyright{
  color: #f0ead6;
  font-size: 16px;
}

/* small phones, tablets, large phones etx */

@media (max-width: 768px) {
  .title{
      font-size: 80px;

  }
  .header__para{
      font-size: 20px;
  }
  .modal {
      top: 0;
      left: 0;
      height: auto;
      transform: none;
      width: 100%;
      flex-direction: column-reverse;
      border-radius: 0;

  }
  .modal__half{
      width: 100%;
      

  }

  .project__description{
     left: 20px;
  
  }



}

/* small phones */
@media (max-width: 480px){
  .title{
      font-size: 52px;
  }
  .header__para{
      font-size: 18px;
  }
  .nav__link:first-child {
      display: none;
  }
  .project__description--para{
      display: none;
  }
  .project__description{
      left: 0;
      padding: 0;
      width: 100%;
      text-align: center;
  }
  .project__description--sub-title{
      margin-bottom: 8px;
  }
  .modal__half{
      padding: 40px;
  }
}

